# flake8-classmethod-staticmethod

./: README.md  setup.cfg
.github/workflows/: python-black.yml  python-publish.yml  python-pylint.yml  python-tox.yml
flake8_classmethod_staticmethod/: checker.py
requirements/: py311.txt  py39.txt
tests/: test_clst100.py  test_clst101.py  test_clst130.py  test_clst131.py  test_clst132.py  test_csm100.py  test_csm131.py  test_csm132.py  test_general.py  util.py
