[metadata]
name = flake8-classmethod-staticmethod
version = 1.0
description = flake8 plugin that checks rules regarding the staticmethod and classmethod decorators.
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Tollkötter
url = https://github.com/atollk/flake8-classmethod-staticmethod
license = MIT
license_file = LICENSE
keywords = flake8, classmethod, staticmethod
classifiers =
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    flake8_classmethod_staticmethod
include_package_data = True
python_requires = >=3.7
zip_safe = False

[options.entry_points]
flake8.extension =
    CLST1 = flake8_classmethod_staticmethod.checker:Checker

